<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@drawable/ic_view_center_home_bg" >

    <ImageView
        android:id="@+id/view_center_user_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/action_settings"
        android:src="@drawable/ic_center_user_icon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/view_center_user_image"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/view_center_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_boy"
            android:text="@string/un_login"
            android:textColor="@color/white"
            android:textSize="@dimen/textview_normal" />

        <TextView
            android:id="@+id/view_center_user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#96ffffff"
            android:textSize="@dimen/textview_normal" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_right_arrow" />

</RelativeLayout>