<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <com.hellen.widget.header.HeaderView
        android:id="@+id/id_header_view"
        android:layout_width="match_parent"
        android:layout_height="48dp" >
    </com.hellen.widget.header.HeaderView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/app_login_shape"
        android:orientation="vertical" >

        <com.hellen.widget.clearedit.ClearEditText
            android:id="@+id/id_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="phone"
            android:padding="10dp"
            android:text="@string/username" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/wel_back_color" />

        <com.hellen.widget.clearedit.ClearEditText
            android:id="@+id/id_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPassword"
            android:padding="10dp"
            android:text="@string/userpass" />
    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp" >

        <Button
            android:id="@+id/id_btn_login"
            style="@android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_select"
            android:text="@string/login"
            android:textColor="@color/white_color_disable" />

        <Button
            android:id="@+id/id_btn_clear"
            style="@android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/btn_select"
            android:text="@string/regest"
            android:textColor="@color/white_color_disable" />
    </TableRow>

    <RelativeLayout
        android:id="@+id/id_main_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

        <TextView
            android:id="@+id/id_relati_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="第三方登录"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignBottom="@id/id_relati_tv"
            android:background="@color/bg_white"
            android:layout_margin="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/id_relati_tv"
            android:layout_marginTop="12dp"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageButton
                    android:id="@+id/wechat"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/umeng_socialize_wechat" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageButton
                    android:id="@+id/wechat_circle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/umeng_socialize_wxcircle" />
            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>